recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:3: error: not enough arguments for method recule: (x$1: Double)Unit.
Unspecified value parameter x$1.
    recule();
          ^Tree:5: error: not found: value double
    tree(1,shrink*length,angle,double);
                               ^Tree:7: error: not enough arguments for method tree: (steps: Int, length: Double, angle: Double, shrink: Double)Unit.
Unspecified value parameter shrink.
    tree(steps,length,-angle)
        ^Tree:14: error: not found: value double
  tree(steps-1,shrink*length,angle,double);
                                   ^