recursion.logo.lessons.recursion.logo.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
  if (steps==0){
    recule();
    gauche(angle);
    tree(1,shrink*length,angle,double);
    allerVers(0,0);
    tree(steps,length,-angle)
  }
  
  else{
  
  avance(length);
  droite(angle);
  tree(steps-1,shrink*length,angle,double);
	
 }
}